--- a/test/matrix/index.html
+++ b/test/matrix/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Maze</title>
+  <title>Matrix</title>
   <meta http-equiv="X-UA-Compatible" content="IE=11" />
   <meta charset="UTF-8" />
   <style>
@@ -13,7 +13,6 @@
       border: 1px solid black;
     }
   </style>
-  <link rel="stylesheet" href="../../src/matrix/matrix.css" />
   <script src="../../bower_components/d3/d3.js"></script>
   <script src="../../src/core.js"></script>
   <script src="../../src/matrix/matrix.js"></script>
@@ -24,22 +23,22 @@
   <hr/>
 
   <button onClick="btnInitClk()">init</button>
-  <input type="text" id="init_size_col" placeholder="col_size" />
   <input type="text" id="init_size_row" placeholder="row_size" />
+  <input type="text" id="init_size_col" placeholder="col_size" />
   <p/>
   <button onClick="btnSetDataClk()">setData</button>
-  <input type="text" id="setData_col_idx" placeholder="col_idx" />
   <input type="text" id="setData_row_idx" placeholder="row_idx" />
+  <input type="text" id="setData_col_idx" placeholder="col_idx" />
   <input type="text" id="setData_val" placeholder="val" />
   <p/>
   <button onClick="btnHighlightClk()">highlight</button>
-    <input type="text" id="highlight_col_idx" placeholder="col_idx" />
-    <input type="text" id="highlight_row_idx" placeholder="row_idx" />
-    <input type="text" id="highlight_color" placeholder="color" />
+  <input type="text" id="highlight_row_idx" placeholder="row_idx" />
+  <input type="text" id="highlight_col_idx" placeholder="col_idx" />
+  <input type="text" id="highlight_color" placeholder="color" />
   <p/>
   <button onClick="btnUnHighlightClk()">unhighlight</button>
-  <input type="text" id="unhighlight_col_idx" placeholder="col_idx" />
   <input type="text" id="unhighlight_row_idx" placeholder="row_idx" />
+  <input type="text" id="unhighlight_col_idx" placeholder="col_idx" />
   <p/>
   <button onClick="btnUnHighlightAllClk()">unhighlightAll</button>
   <p/>
@@ -53,29 +52,29 @@
     var matrix = new thisplay.Matrix('#canvas');
 
     function btnInitClk() {
-      var size_col = document.getElementById('init_size_col').value;
       var size_row = document.getElementById('init_size_row').value;
-      matrix.init(Number(size_col), Number(size_row));
+      var size_col = document.getElementById('init_size_col').value;
+      matrix.init(Number(size_row), Number(size_col));
     }
 
     function btnSetDataClk() {
-      var col_idx = document.getElementById('setData_col_idx').value;
       var row_idx = document.getElementById('setData_row_idx').value;
+      var col_idx = document.getElementById('setData_col_idx').value;
       var val = document.getElementById('setData_val').value;
-      matrix.setData(Number(col_idx), Number(row_idx), Number(val));
+      matrix.setData(Number(row_idx), Number(col_idx), Number(val));
     }
 
     function btnHighlightClk() {
-      var col_idx = document.getElementById('highlight_col_idx').value;
       var row_idx = document.getElementById('highlight_row_idx').value;
+      var col_idx = document.getElementById('highlight_col_idx').value;
       var color = document.getElementById('highlight_color').value;
-      matrix.highlight(Number(col_idx), Number(row_idx), color);
+      matrix.highlight(Number(row_idx), Number(col_idx), color);
   	}
 
     function btnUnHighlightClk() {
-      var col_idx = document.getElementById('unhighlight_col_idx').value;
       var row_idx = document.getElementById('unhighlight_row_idx').value;
-      matrix.unhighlight(Number(col_idx), Number(row_idx));
+      var col_idx = document.getElementById('unhighlight_col_idx').value;
+      matrix.unhighlight(Number(row_idx), Number(col_idx));
   	}
 
     function btnUnHighlightAllClk() {
