[hotfix] 함수명 불일치 해결

--- a/test/queue/index.html
+++ b/test/queue/index.html
@@ -29,15 +29,15 @@
 
     function btnPushClk() {
       var value = document.getElementById('pushValue').value;
-      queue.Push(Number(value));
+      queue.push(Number(value));
     }
 
     function btnPopClk() {
-      queue.Pop();
+      queue.pop();
     }
-		
+
 		function btnClearClk() {
-      queue.Clear();
+      queue.clear();
     }
   </script>
 </body>
