#1 Graph 1.makeUndirectedEdge 추가 2. deleteNode, deleteEdge 추가 3. makeNode (노드 id값 갖도록 수정) 4. force 값 수정

--- a/test/graph/index.html
+++ b/test/graph/index.html
@@ -30,12 +30,28 @@
   <p/>
   <button onClick="btnMakeNodeClk()">makeNode</button>
   <input type="text" id="makeNode_id" placeholder="id" />
+  <input type="text" id="makeNode_text" placeholder="text" />
   <p/>
   <button onClick="btnMakeEdgeClk()">makeEdge</button>
-  <input type="text" id="source" placeholder="source" />
-  <input type="text" id="target" placeholder="target" />
-  <input type="text" id="value" placeholder="value" />
+  <input type="text" id="makeEdge_src" placeholder="source" />
+  <input type="text" id="makeEdge_trg" placeholder="target" />
+  <input type="text" id="makeEdge_val" placeholder="value" />
   <p/>
+
+  <button onClick="btnMakeUndirectedEdgeClk()">makeUndirectedEdge</button>
+  <input type="text" id="makeUnDirectedEdge_src" placeholder="source" />
+  <input type="text" id="makeUnDirectedEdge_trg" placeholder="target" />
+  <input type="text" id="makeUnDirectedEdge_val" placeholder="value" />
+  <p/>
+  
+  <button onClick="btnDeleteNodeClk()">deleteNode</button>
+  <input type="text" id="deleteNode_id" placeholder="id" />
+  <p/>
+  <button onClick="btnDeleteEdgeClk()">deleteEdge</button>
+  <input type="text" id="deleteEdge_src" placeholder="source" />
+  <input type="text" id="deleteEdge_trg" placeholder="target" />
+  <p/>
+  
   <button onClick="btnHighlightNode()">highlightNode</button>
   <input type="text" id="highlightNode_idx" placeholder="idx" />
   <p/>
@@ -76,14 +92,15 @@
     }
 
     function btnMakeNodeClk() {
-      var makeID = document.getElementById('makeNode_id').value;
-      graph.makeNode(Number(makeID));
+      var id = document.getElementById('makeNode_id').value;
+      var text = document.getElementById('makeNode_text').value;
+      graph.makeNode(Number(id), text);
     }
 
     function btnMakeEdgeClk() {
-      var source = document.getElementById('source').value;
-      var target = document.getElementById('target').value;
-      var value = document.getElementById('value').value;
+      var source = document.getElementById('makeEdge_src').value;
+      var target = document.getElementById('makeEdge_trg').value;
+      var value = document.getElementById('makeEdge_val').value;
 
       if (value === '') {
         graph.makeEdge(Number(source), Number(target));
@@ -92,7 +109,31 @@
         graph.makeEdge(Number(source), Number(target), Number(value));
       }
     }
+    
+    function btnMakeUndirectedEdgeClk() {
+      var source = document.getElementById('makeUnDirectedEdge_src').value;
+      var target = document.getElementById('makeUnDirectedEdge_trg').value;
+      var value = document.getElementById('makeUnDirectedEdge_val').value;
 
+      if (value === '') {
+        graph.makeUnDirectedEdge(Number(source), Number(target));
+      } 
+      else {
+        graph.makeUnDirectedEdge(Number(source), Number(target), Number(value));
+      }
+    }
+    
+    function btnDeleteNodeClk() {
+      var makeID = document.getElementById('deleteNode_id').value;
+      graph.deleteNode(Number(makeID));
+    }
+
+    function btnDeleteEdgeClk() {
+      var source = document.getElementById('deleteEdge_src').value;
+      var target = document.getElementById('deleteEdge_trg').value;
+      graph.deleteEdge(Number(source), Number(target));
+    }    
+   
     function btnHighlightNode() {
       var idx = document.getElementById('highlightNode_idx').value;
       graph.highlightNode(Number(idx));
@@ -126,16 +167,11 @@
     function btnClearClk() {
       graph.clear();
     }
-    graph.makeNode(3);
-    graph.makeNode(4);
-    graph.makeEdge(3, 4, 2);
-    graph.makeNode(5);
-    graph.makeNode(6);
-    graph.makeEdge(3, 5 ,3);
-    graph.makeEdge(6, 5 ,3);
-    graph.highlightNode(6);
-    graph.highlightEdge(6, 5, 3);
-    graph.makeEdge(3, 4, 3);
+    graph.makeNode(1, 5);
+    graph.makeNode(2, 6);
+    graph.makeNode(3, 7);
+    graph.makeNode(4, 8);
+    graph.makeUnDirectedEdge(1, 2, 3);
   </script>
 </body>
 
