stack 틀 생성 및 push animation 수정

--- a/test/stack/index.html
+++ b/test/stack/index.html
@@ -11,6 +11,9 @@
       width: 800px;
       height: 450px;
       border: 1px solid black;
+      -webkit-transform-origin-x: 0; 
+      -webkit-text-size-adjust: none;
+
     }
   </style>
   <script src="../../bower_components/d3/d3.js"></script>
